<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        tools:context="jp.syoboi.android.notificationutil.MainActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="81dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            tools:layout_editor_absoluteX="364dp"
            tools:layout_editor_absoluteY="81dp"/>

        <TextView
            android:id="@+id/readNotificationSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/readNotificationSetting"
            android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@+id/guidelineEnd"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:id="@+id/popupNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/popupNotification"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/readNotificationSetting"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/popupNotificationGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/popupNotification">

            <EditText
                android:id="@+id/popupTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="#ffffffff"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupTextColorLabel"/>

            <EditText
                android:id="@+id/popupTextBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="#88000000"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupTextBackgroundLabel"/>

            <TextView
                android:id="@+id/popupTextColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/popupTextColor"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/popupScrollIntervalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/popupScrollInterval"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupScrollLines"/>

            <TextView
                android:id="@+id/poupScrollLinesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/popupScrollLines"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupTextBackground"/>

            <EditText
                android:id="@+id/popupScrollLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="4"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poupScrollLinesLabel"/>

            <EditText
                android:id="@+id/popupScrollInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="400"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupScrollIntervalLabel"/>

            <TextView
                android:id="@+id/popupTextBackgroundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/popupTextBackground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupTextColor"/>
        </android.support.constraint.ConstraintLayout>

        <CheckBox
            android:id="@+id/speechNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/speechNotification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/popupNotificationGroup"
            app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>